Changes in version 0.4.4
  * fixed Rcpp dependency problems

Changes in version 0.4.3
  * improved missing value handling
  * fixed bug in "EnsRocss"

Changes in version 0.4.2

  * Fixed bug with missing values and na.rm=T in translating to categorical forecasts in `convert2prob`
  * Fixed issue with limited amount of unique values in `convert2prob`

Changes in version 0.4.1

  * Fixed CRAN NOTE on registration of native routines
  * Fixed bug in setting up reference forecasts with missing observations
  * Improved error handling with missing values in forecast
  * Improve performance of `convert2prob` with reduced baseline
  * Added missing value support for `count2prob`
  * Fixed unit test causing episodic errors

Changes in version 0.4.0

  * Adopted to new version of SpecsVerification (0.5.0)
  * Fully implemented out-of-sample computation of percentile thresholds
  * Changed to new implementation of AUC in 'SpecsVerification' with standard errors

Changes in version 0.3.0 (2016-09-28)

  * added support for out-of-sample reference forecasts (user-defined or by keyword for a few standard approaches, issues #1 and #2)
  * added support for difference in scores functions (related to skill scores)
  * removed onload function to check package version. Updating is now dealt with by update.packages as for other CRAN packages.
  * removed non-sensical mean error skill score `EnsMess`.
  * deprecated ill-defined ROC area skill score. In future versions, only the ROC area score will be implemented `EnsRoca`.
  * Added reliability categorization following Weisheimer et al. (2014).
  * fixed bug in `convert2prob` for climatological forecasts (reduced set of values to compute percentile boundaries for consistency).
  * fix for `FairRpss` against climatological reference forecast with category boundaries defined on distribution of verifying observations.

Changes in version 0.2.0 (2016-01-25)
